# MDS7202

./: .gitignore  README.md  main.py  pyproject.toml
Lab_1/: Laboratorio_1.ipynb  pyproject.toml
Labs/Lab6/: Lab6_Enunciado.ipynb
Labs/Lab7/: Lab7_enunciado.ipynb
Labs/Lab_1/: Laboratorio_1.ipynb
Labs/Lab_1/SolucionAnimales/: animales.py  main.py
Labs/Lab_10/: Entrega.md  Lab10_enunciado.ipynb
Labs/Lab_10/faiss_index/: index.pkl
Labs/Lab_10/faiss_index_aprendizaje_maquina/: index.pkl
Labs/Lab_2/: Laboratorio_2.ipynb
Labs/Lab_3/: Lab3_Enunciado.ipynb
Labs/Lab_4/: Lab4_Enunciado.ipynb
Labs/Lab_5/: Lab5_enunciado.ipynb
Labs/Lab_6/: Lab6_Enunciado.ipynb
Labs/Lab_7/: Entrega.md  Lab7_enunciado.ipynb  pipeline_lgbm_opt.pkl
Labs/Lab_8/: .dockerignore  .gitignore  Lab8_enunciado.ipynb  dockerfile  main.py  optimize.py  requirements.txt  requirements_optuna.txt
Labs/Lab_8/models/: xgb_2026-06-09_15-49-36.pkl  xgb_2026-06-09_22-37-16.pkl
Labs/Lab_9/: Lab9_Enunciado.ipynb  airflow.cfg  iniciar_airflow.ps1  iniciar_airflow.sh
Labs/Lab_9/dags/: spotify_pipeline_dag.py
laboratorio_1/: Laboratorio_1.ipynb
proyecto/: Enunciado_Parte1_Analisis.ipynb
